2003-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (dump_frame): Avoid crash on frames without a method. Patch
	sam@superduper.net (sam clegg). Fixes #46197.
	(ves_exec_method_with_context): Fix unbox casting.

2003-09-25  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c - reinstate use of mono_marshal_get_delegate_invoke
	for ordering and fix CALLI to handle wrapper. More wrapper handling
	in CALL and LDSTR. Add another string conversion case.

2003-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (ves_exec_method): Fix warning.
	(ves_exec_method_with_context): Fix CGT_UN and CLT_UN. Patch by
	David Waite (mass@akuma.org).

2003-9-24  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: I broke calling native delegates reinstate
	old code for the moment.

2003-9-22  Bernie Solomon  <bernard@ugsolutions.com>

	* interp.c: use mono_marshal_get_delegate_invoke to get delegate 
	invocation order consistent. Fix THROW_EX, fix ip in overflow 
	exceptions.

Fri Sep 12 10:42:08 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c, interp.h: patch from Bernie Solomon <bernard@ugsolutions.com>:
	64 bit/opcodes/exception handling fixes.

2003-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Use mono_field_from_token () in the appropriate places.
	This simplifies the code and also fixes #48051.

2003-08-27  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (main): Fix the order of initialization calls so it maches 
	the order in the JIT.Patch by Bernie Solomon (bernard@ugsolutions.com).
	Also remove the unused ms mutex.
	
	* interp.c: Get rid of metadata_section.
	
2003-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c (main): Call g_thread_init () to make glib thread-safe. 
	Fixes #47682. Thanks to Laurent Morichetti (l_m@pacbell.net) for 
	reporting this.

2003-08-18  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Get rid of duplicate definition of CHECK_MUL_OVERFLOW.
	* interp.h interp.c: Get rid of VAL_VALUETA, use VAL_MP instead. Fix